# fuel-token-standard

./: .env.example  Cargo.toml  Forc.toml  README.md  build_and_test.sh
-tests/actions/: deploy.rs  initialize.rs  market_interact.rs  mint.rs  mod.rs  setup.rs  transfer.rs
-tests/utils/: mod.rs
src/: main.sw
tests/: harness.rs
tests/actions/: deploy.rs  deploy_token_contract.rs  initialize.rs  methods.rs  mod.rs  setup.rs  transfer.rs
tests/local_tests/: deposit_and_transfer_eth.rs  mint_and_transfer.rs  mod.rs  only_owner_can_call.rs  token_contract.rs
tests/testnet_tests/: deploy.rs  initialize.rs  market_interact.rs  mint.rs  mod.rs  transfer.rs
tests/utils/: local_tests_utils.rs  mod.rs  number_utils.rs  testnet_tests_utils.rs
