[package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"
name = "tests"
version = "0.0.0"

[dev-dependencies]
fuels = { version = "0.31", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }


[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"

[dependencies]
# bignumber = "0.0.16"
dotenv = "0.15.0"
rand = "0.8.5"
